loader image and ajax pester

--- a/app/views/reverb/index.html.erb
+++ b/app/views/reverb/index.html.erb
@@ -9,3 +9,6 @@
 		</div>
 	</div>
 </div>
+<div class="u-width-wrapper u-centered">
+	<%= image_tag('ajax-loader.gif', class: 'u-hidden AjaxLoader') %>
+</div>
