--- a/app/assets/stylesheets/reverb.css
+++ b/app/assets/stylesheets/reverb.css
@@ -5,6 +5,11 @@ body {
 	background-color: #f1f1eb;
 }
 
+.AjaxLoader {
+	display: block !important;
+	margin-top: 2em !important;
+}
+
 .Header {
 	height: 7em;
 	background-color: purple;
