--- a/app/views/reverb/index.html.erb
+++ b/app/views/reverb/index.html.erb
@@ -10,5 +10,5 @@
 	</div>
 </div>
 <div class="u-width-wrapper u-centered">
-	<%= image_tag('ajax-loader.gif', class: 'u-hidden AjaxLoader') %>
+	<%= image_tag('ajax_loader.gif', class: 'u-hidden u-centered AjaxLoader') %>
 </div>
