puke description onto page

--- a/app/views/reverb/index.html.erb
+++ b/app/views/reverb/index.html.erb
@@ -11,4 +11,6 @@
 </div>
 <div class="u-width-wrapper u-centered">
 	<%= image_tag('ajax_loader.gif', class: 'u-hidden u-centered AjaxLoader') %>
+<ul class='Results'>
+</ul>
 </div>
