--- a/app/views/reverb/listing.mustache
+++ b/app/views/reverb/listing.mustache
@@ -1,25 +1,10 @@
 <div class="listing">
   <div class="listing-image">
     <img src="{{photo_url}}">
-  </div>
-  <ul class="listing-data">
-    <li>
-      <b>{{title}}</b>
-    </li>
-    <li>
-      <b>Make</b>: {{make}}
-    </li>
-    <li>
-      <b>Model</b>: {{model}}
-    </li>
-    <li>
-      <b>Year</b>: {{year}}
-    </li>
-    <li>
-      <b>Condition</b>: {{condition}}
-    </li>
-    <li>
-      <b>Description</b>: {{{description_preview}}}
-    </li>
+  </div><div class="listing-data">
+      <h3>{{title}}</h3>
+      <p>{{year}}</p>
+      <p><b>condition:</b> {{condition}}</p>
+      <p class='listing-data-price'>{{price_fmt}}</p>
   </div>
 </div>
