--- a/app/views/reverb/listing.mustache
+++ b/app/views/reverb/listing.mustache
@@ -1,4 +1,4 @@
-<div class="listing">
+<a href="{{url}}" class="listing">
   <div class="listing-image">
     <img src="{{photo_url}}">
   </div><div class="listing-data">
@@ -7,4 +7,4 @@
       <p><b>condition:</b> {{condition}}</p>
       <p class='listing-data-price'>{{price_fmt}}</p>
   </div>
-</div>
+</a>
