--- a/app/assets/javascripts/templates.js.erb
+++ b/app/assets/javascripts/templates.js.erb
@@ -14,5 +14,5 @@
   templates = Hash[template_pairs].to_json
 %>
 // Ahh Templates generated at <%= Time.now %>
-//asadss
+//asadssa
 var Templates = <%= templates %>;
