--- a/app/views/reverb/index.html.erb
+++ b/app/views/reverb/index.html.erb
@@ -9,6 +9,7 @@
 		</div>
 	</div>
 </div>
+<div class="alert u-hidden"></div>
 <div class="u-width-wrapper u-centered">
 	<%= image_tag('ajax_loader.gif', class: 'u-hidden u-centered AjaxLoader') %>
 	<div class='Results'>
